<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".sign_up_page">
    <ImageView
        android:id="@+id/sign_up_bg"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="TODO"
        android:scaleType="centerCrop"
        android:src="@drawable/background_image_one_signup" />

    <EditText
        android:id="@+id/sign_up_emailID"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/userimg"
        android:layout_marginHorizontal="50dp"
        android:layout_marginTop="85dp"
        android:inputType="textEmailAddress"
        android:hint="@string/email"
        android:textColor="@android:color/white" />

    <EditText
        android:id="@+id/sign_up_pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/sign_up_emailID"
        android:layout_marginHorizontal="50dp"
        android:inputType="textPassword"
        android:layout_marginTop="0dp"
        android:hint="@string/password"
        android:textColor="@android:color/white" />
    <EditText
        android:id="@+id/sign_up_con_pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/sign_up_pass"
        android:inputType="textPassword"
        android:layout_marginHorizontal="50dp"
        android:layout_marginTop="0dp"
        android:hint="@string/confirm_password"
        android:textColor="@android:color/white" />

    <ProgressBar
        android:id="@+id/sign_up_process"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginTop="20dp"
        android:visibility="invisible" />
    <Button
        android:id="@+id/sign_up_btu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="26dp"
        android:layout_marginRight="26dp"
        android:layout_marginBottom="196dp"
        android:background="@drawable/round_bg"
        android:drawableStart="@drawable/ic_logo_google"
        android:drawableLeft="@drawable/ic_logo_google"
        android:text="@string/logout" />

</RelativeLayout>