<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".loginAct">

    <ImageView
        android:id="@+id/imagevback"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="TODO"
        android:scaleType="centerCrop"
        android:src="@drawable/background_image_one_signin" />

    <ProgressBar
        android:id="@+id/progress_circular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginTop="20dp"
        android:visibility="invisible" />

    <ImageView
        android:id="@+id/userimg"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:background="@drawable/round_arrow_forword"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_logo_google" />

    <EditText
        android:id="@+id/emailID"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/userimg"
        android:layout_marginHorizontal="50dp"
        android:layout_marginTop="50dp"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textColor="@android:color/white" />

    <EditText
        android:id="@+id/passs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/emailID"
        android:layout_marginHorizontal="50dp"
        android:layout_marginTop="0dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColor="@android:color/white" />


    <Button
        android:id="@+id/btu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="26dp"
        android:layout_marginRight="26dp"
        android:layout_marginBottom="231dp"
        android:background="@drawable/round_bg"
        android:drawableStart="@drawable/ic_logo_google"
        android:drawableLeft="@drawable/ic_logo_google"
        android:text="@string/login_with_google" />

    <Button
        android:id="@+id/btu1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="26dp"
        android:layout_marginRight="26dp"
        android:layout_marginBottom="149dp"
        android:background="@drawable/round_bg"
        android:drawableStart="@drawable/ic_logo_google"
        android:drawableLeft="@drawable/ic_logo_google"
        android:text="@string/logout" />


    <Button
        android:id="@+id/google_sign_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/btu1"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="0dp"
        android:layout_marginLeft="26dp"
        android:layout_marginRight="26dp"
        android:layout_marginBottom="60dp"
        android:background="@drawable/round_bg"
        android:drawableStart="@drawable/ic_logo_google"
        android:drawableLeft="@drawable/ic_logo_google"
        android:text="Google Sign In" />

    <Button
        android:id="@+id/siginout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/btu1"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="26dp"
        android:layout_marginEnd="0dp"
        android:layout_marginRight="26dp"
        android:layout_marginBottom="60dp"
        android:background="@drawable/round_bg"
        android:drawableStart="@drawable/ic_logo_google"
        android:drawableLeft="@drawable/ic_logo_google"
        android:text="@string/google_sign_out" />

</RelativeLayout>